fix spacing

--- a/styles.css
+++ b/styles.css
@@ -39,4 +39,5 @@ h1 {
   font-family: monospace;
   width: 600px;
   height: 200px;
+  padding: 100px 0;
 }
